--- a/kivy/main_ui.kv
+++ b/kivy/main_ui.kv
@@ -8,6 +8,7 @@
         
         MDTopAppBar:
             title: "Openlingu"
+            anchor_title: "left"
             right_action_items: [["cog", lambda x: app.open_settings_menu()]]
             md_bg_color: 0.82, 0.78, 0.69, 1
             specific_text_color: "black"
