Added needed menus to bottom bar

--- a/kivy/main_ui.kv
+++ b/kivy/main_ui.kv
@@ -21,13 +21,32 @@
             panel_color: 0.82, 0.78, 0.69, 1
 
             MDBottomNavigationItem:
-                name: 'screen 1'
-                text: 'Home'
-                icon: 'home'
+                name: 'task_screen'
+                text: 'Aufgaben'
+                icon: 'format-list-numbered'
 
                 MDLabel:
-                    text: 'Home'
+                    text: 'Aufgaben'
                     halign: 'center'
+
+            MDBottomNavigationItem:
+                name: 'lection_screen'
+                text: 'Lektionen'
+                icon: 'map'
+
+                MDLabel:
+                    text: 'Lektionen'
+                    halign: 'center'
+            
+            MDBottomNavigationItem:
+                name: 'vocab_screen'
+                text: 'Vokabeln'
+                icon: 'book'
+
+                MDLabel:
+                    text: 'Vokabeln'
+                    halign: 'center'
+            
 
             MDBottomNavigationItem:
                 name: 'screen 2'
