Zwischen Account Ui

--- a/kivy/main_ui.kv
+++ b/kivy/main_ui.kv
@@ -27,7 +27,7 @@
 
                 MDLabel:
                     text: 'Aufgaben'
-                    halign: 'center'
+                    halingn: 'center'
 
             MDBottomNavigationItem:
                 name: 'lection_screen'
@@ -53,9 +53,9 @@
                 text: 'Konto'
                 icon: 'account'
 
-                MDLabel:
-                    text: 'Konto'
-                    halign: 'center'
+                MDBoxLayout:
+                    orientation: 'vertical'
+                        
 
 <SettingsScreen>:
     name: "settings"
