--- a/kivy/auth_pages.kv
+++ b/kivy/auth_pages.kv
@@ -1,34 +1,116 @@
+<WelcomeScreen>:
+    name: "welcome"
+    MDScreen:
+        MDFloatLayout:
+            md_bg_color: 1, 1, 1, 1
+            Image:
+                source: "icons/Orange_Dragon.png"
+                pos_hint: {"y": 0.25}
+            MDLabel:
+                text: "Welcome to OpenLingu"
+                halign: "center"
+                font_size: "40sp"
+                pos_hint: {"center_x": 0.5, "center_y": 0.48}       
+            MDFloatLayout:
+                size_hint: 0.85, 0.08
+                md_bg_color: 1, 1, 1, 1
+                pos_hint: {"center_x": 0.5, "center_y": 0.32} 
+                canvas:
+                    Color:
+                        rgba: 0.82, 0.78, 0.69, 1
+                    RoundedRectangle:
+                        size: self.size
+                        pos: self.pos
+                        radius: [25]
+                MDTextButton:
+                    text: "Anmelden"
+                    size_hint: 1, None
+                    pos_hint: {"center_x": 0.5, "center_y": 0.5}
+                    on_press: app.sign_in_menu()
+            MDFloatLayout:
+                size_hint: 0.85, 0.08
+                md_bg_color: 1, 1, 1, 1
+                pos_hint: {"center_x": 0.5, "center_y": 0.22} 
+                canvas:
+                    Color:
+                        rgba: 0.82, 0.78, 0.69, 1
+                    RoundedRectangle:
+                        size: self.size
+                        pos: self.pos
+                        radius: [25]
+                MDTextButton:
+                    text: "Registrieren"
+                    size_hint: 1, None
+                    pos_hint: {"center_x": 0.5, "center_y": 0.5}
+                    on_press: app.sign_in_menu()
+
+                
+
+            
+
+
 
 
 <SignInScreen>:
     name: "signin"
     MDScreen:
-        MDBoxLayout:
-            orientation: "vertical"
-
-            MDTopAppBar:
-                title: "Anmelden"
-                md_bg_color: 0.82, 0.78, 0.69, 1
-                specific_text_color: "black"
-                right_action_items: [["icons/signup.png", lambda x: app.sign_up_menu()]]
-
-            GridLayout:
-                rows: 3
-                cols: 1
-                padding: 45,175
-
-                MDTextField:
+        MDFloatLayout:
+            md_bg_color: 1, 1, 1, 1
+            MDLabel:
+                text: "Anmelden"
+                halign: "center"
+                font_size: "70sp"
+                pos_hint: {"center_x": 0.5, "center_y": 0.7}       
+            MDFloatLayout:
+                size_hint: 0.85, 0.08
+                md_bg_color: 1, 1, 1, 1
+                pos_hint: {"center_x": 0.5, "center_y": 0.42} 
+                canvas:
+                    Color:
+                        rgba: 0.82, 0.78, 0.69, 1
+                    RoundedRectangle:
+                        size: self.size
+                        pos: self.pos
+                        radius: [25]
+                TextInput:
                     hint_text: "Email"
-                    halign: "left"
-                
-                MDTextField:
+                    size_hint: 1, None
+                    pos_hint: {"center_x": 0.5, "center_y": 0.5}
+                    height: self.minimum_height
+                    cursor_color: 0, 0, 0, 1
+                    cursor_width: "2sp"
+                    multiline: False
+                    padding: 15
+                    background_color: 0, 0, 0, 0
+            MDFloatLayout:
+                size_hint: 0.85, 0.08
+                md_bg_color: 1, 1, 1, 1
+                pos_hint: {"center_x": 0.5, "center_y": 0.32} 
+                canvas:
+                    Color:
+                        rgba: 0.82, 0.78, 0.69, 1
+                    RoundedRectangle:
+                        size: self.size
+                        pos: self.pos
+                        radius: [25]
+                TextInput:
                     hint_text: "Passwort"
-                    halign: "left"
+                    password: True
+                    size_hint: 1, None
+                    pos_hint: {"center_x": 0.5, "center_y": 0.5}
+                    height: self.minimum_height
+                    cursor_color: 0, 0, 0, 1
+                    cursor_width: "2sp"
+                    multiline: False
+                    padding: 15
+                    background_color: 0, 0, 0, 0
+            MDTextButton:
+                text: "Passwort vergessen?"
+                pos_hint: {"center_x": 0.5, "center_y": 0.21}
+                text_color: 0.82, 0.78, 0.69, 1
 
-                MDRoundFlatButton:
-                    text: "Anmelden"
-                    halign: "left"
-                    on_press: app.main_menu()
+
+            
 
 <SignUpScreen>:
     name: "signup"
