--- a/kivy/auth_pages.kv
+++ b/kivy/auth_pages.kv
@@ -44,7 +44,7 @@
                     pos_hint: {"center_x": 0.5, "center_y": 0.5}
                     on_press: app.sign_up_menu()
 
-<Passwordfield>:
+<Passwordloginfield>:
     size_hint_y: None
     height: login_password.height
                     
@@ -66,6 +66,52 @@
         on_release:
             self.icon = "eye" if self.icon == "eye-off" else "eye-off"
             login_password.password = False if login_password.password is True else True
+
+<Passwordregisterfield>:
+    size_hint_y: None
+    height: register_password.height
+                    
+    MDTextField:
+        id: register_password
+        hint_text: "Passwort"
+        password: True
+        cursor_color: 0, 0, 0, 1
+        cursor_width: "2sp"
+        multiline: False
+        padding: 15
+        mode: "rectangle"
+
+    MDIconButton:
+        icon: "eye-off"
+        pos_hint: {"center_y": .5}
+        pos: register_password.width - self.width + dp(8), 0
+        theme_text_color: "Hint"
+        on_release:
+            self.icon = "eye" if self.icon == "eye-off" else "eye-off"
+            register_password.password = False if register_password.password is True else True
+
+<Passwordconfirmfield>:
+    size_hint_y: None
+    height: confirm_password.height
+                    
+    MDTextField:
+        id: confirm_password
+        hint_text: "Passwort"
+        password: True
+        cursor_color: 0, 0, 0, 1
+        cursor_width: "2sp"
+        multiline: False
+        padding: 15
+        mode: "rectangle"
+
+    MDIconButton:
+        icon: "eye-off"
+        pos_hint: {"center_y": .5}
+        pos: confirm_password.width - self.width + dp(8), 0
+        theme_text_color: "Hint"
+        on_release:
+            self.icon = "eye" if self.icon == "eye-off" else "eye-off"
+            confirm_password.password = False if confirm_password.password is True else True
                          
 
 <SignInScreen>:
@@ -94,7 +140,7 @@
                     multiline: False
                     mode: "rectangle"
                 
-                Passwordfield:
+                Passwordloginfield:
 
                 MDTextButton:
                     text: "Passwort vergessen?"
@@ -138,22 +184,9 @@
                     cursor_width: "2sp"
                     multiline: False
                 
-                MDTextField:
-                    id: register_password
-                    hint_text: "Passwort"
-                    password: True
-                    mode: "rectangle"
-                    cursor_color: 0, 0, 0, 1
-                    cursor_width: "2sp"
-                    multiline: False
-                
-                MDTextField:
-                    hint_text: "Passwort wiederholen"
-                    password: True
-                    mode: "rectangle"
-                    cursor_color: 0, 0, 0, 1
-                    cursor_width: "2sp"
-                    multiline: False
+                Passwordregisterfield:
+            
+                Passwordconfirmfield:
                 
                 MDRectangleFlatButton:
                     text: "Registrieren"
