--- a/kivy/auth_pages.kv
+++ b/kivy/auth_pages.kv
@@ -95,6 +95,12 @@
 
 <SignUpScreen>:
     name: "signup"
+    username: kv_username
+    email: kv_email
+    password1: kv_password1
+    password2: kv_password2
+    test_label: kv_test_label
+
     MDScreen:
         MDBoxLayout:
             orientation: "vertical"
@@ -107,7 +113,7 @@
 
             GridLayout:
                 cols: 1
-                rows: 5
+                rows: 6
 
                 padding: 45, 100
                 
@@ -117,6 +123,7 @@
                     cursor_color: 0, 0, 0, 1
                     cursor_width: "2sp"
                     multiline: False
+                    id: kv_username
                 
 
                 MDTextField:
@@ -125,6 +132,7 @@
                     cursor_color: 0, 0, 0, 1
                     cursor_width: "2sp"
                     multiline: False
+                    id: kv_email
                 
                 MDTextField:
                     id: register_password
@@ -134,6 +142,7 @@
                     cursor_color: 0, 0, 0, 1
                     cursor_width: "2sp"
                     multiline: False
+                    id: kv_password1
                 
                 MDTextField:
                     hint_text: "Passwort wiederholen"
@@ -142,9 +151,15 @@
                     cursor_color: 0, 0, 0, 1
                     cursor_width: "2sp"
                     multiline: False
+                    id: kv_password2
                 
                 MDRectangleFlatButton:
                     text: "Registrieren"
-                    on_press: app.main_menu()
+                    on_press: app.sign_up()
+
+                MDLabel:
+                    text: "Click Sign Up to display data from input fields"
+                    multiline: True
+                    id: kv_test_label
 
                 
