Button Offset Fix in Auth Menus

--- a/kivy/auth_pages.kv
+++ b/kivy/auth_pages.kv
@@ -136,6 +136,7 @@
                 rows: 4
 
                 padding: 45, 100
+                spacing: 12
 
                 MDTextField:
                     hint_text: "Email"
@@ -178,6 +179,7 @@
                 rows: 6
 
                 padding: 45, 100
+                spacing: 12
                 
                 MDTextField:
                     hint_text: "Benutzername"
