--- a/kivy/main_ui.kv
+++ b/kivy/main_ui.kv
@@ -56,7 +56,7 @@
 
                 MDBoxLayout:
                     orientation: 'vertical'
-                    md_bg_color: 0.82, 0.78, 0.69, 1
+                    md_bg_color: "white"
                     size_hint: 1, 1
 
                     MDBoxLayout:
@@ -84,8 +84,51 @@
                             size_hint: 0.6, 1
                     
                     GridLayout:
-                        size_hint: 1, 0.7
-                        md_bg_color: "white"
+                        size_hint: 0.8, 0.7
+                        color: "white"
+                        cols: 2
+                        rows: 4
+                        
+
+                        MDLabel:
+                            text:'Benutzername:'
+                            halign: 'right'
+                            text_color: "black"
+                        MDLabel:
+                            id: accountpage_username
+                            text:'Placeholder'
+                            halign: 'center'
+                            text_color: "black"
+                        
+                        MDLabel:
+                            text:'Alias:'
+                            halign: 'right'
+                            text_color: "black"
+                        MDLabel:
+                            id: accountpage_alias
+                            text:'@Stinker'
+                            halign: 'center'
+                            text_color: 0, 0, 0, 1
+                        
+                        MDLabel:
+                            text:'Absolvierte Lektionen:'
+                            halign: 'right'
+                            text_color: "black"
+                        MDLabel:
+                            id: accountpage_completed_lessons
+                            text:'0'
+                            halign: 'center'
+                            text_color: "black"
+                        
+                        MDLabel:
+                            text:'Beitrittsdatum:'
+                            halign: 'right'
+                            text_color: "black"
+                        MDLabel:
+                            id: accountpage_join_date
+                            text:'3.01.2025'
+                            halign: 'center'
+                            text_color: "black"
 
                 
             
