--- a/kivy/new_user.kv
+++ b/kivy/new_user.kv
@@ -45,6 +45,7 @@
                 specific_text_color: "black"
             
             GridLayout:
+                id: newuserpagetwo_main_panel
                 cols: 1
                 rows: 3
 
@@ -55,13 +56,6 @@
                     text: "RUF MICH AN BEVOR DU WAS AENDERST"
                     multiline: False
 
-                MDTextField:
-                    hint_text: "Language"
-                    mode: "rectangle"
-                    cursor_color: 0, 0, 0, 1
-                    cursor_width: "2sp"
-                    multiline: False
-                    readonly: True
                 
 
 
