--- a/kivy/new_user.kv
+++ b/kivy/new_user.kv
@@ -30,6 +30,8 @@
                 
                 MDRectangleFlatButton:
                     text: "Continue"
+                
+
 
 
 <NewUserPage2>:
@@ -45,7 +47,7 @@
                 specific_text_color: "black"
             
             GridLayout:
-                id: newuserpagetwo_main_panel
+                id: layout1
                 cols: 1
                 rows: 3
 
@@ -61,6 +63,8 @@
 
                 MDRectangleFlatButton:
                     text: "Continue"
+
+            
 
 <NewUserPage3>:
     name: "newuser3"
